the_project/manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: the-project-volume
          persistentVolumeClaim:
            claimName: the-project-claim
      containers:
        - name: todo-app
          image: todo-app:latest
          imagePullPolicy: Never
          volumeMounts:
            - name: the-project-volume
              mountPath: /app/cache
