the_project/manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-postgres-svc
  namespace: project
spec:
  selector:
    app: project-postgres
  clusterIP: None
  ports:
  - port: 5432
    name: web
