the_project/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: todo-app-route
  namespace: project
spec:
  parentRefs:
    - name: todo-app-gateway
  rules:
    - matches: 
      - path:
          type: PathPrefix
          value: /todos
      filters:
      - type: URLRewrite
        urlRewrite:
          path: 
            type: ReplacePrefixMatch
            replacePrefixMatch: /
      backendRefs:
        - name: todo-backend-svc
          port: 3000
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: todo-app-svc
          port: 3000
